<resources>
    <string name="app_name" translatable="false">UMatters</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="title_activity_tags_setup" translatable="false">TagsSetupActivity</string>
    <string name="title_activity_profile" translatable="false">ProfileActivity</string>
    <string name="title_activity_archives" translatable="false">ArchivesActivity</string>
    <string name="title_activity_popular" translatable="false">PopularActivity</string>
    <string name="title_activity_create_box" translatable="false">CreateBoxActivity</string>
    <string name="title_activity_modify_box" translatable="false">title_activity_modify_box</string>
    <string name="title_activity_filter" translatable="false">title_activity_filter</string>
    <string name="title_activity_tags" translatable="false">title_activity_tags</string>
    <string name="title_activity_subscriptions" translatable="false">title_activity_subscriptions</string>
    <string name="title_activity_notifications" translatable="false">title_notifications_activity</string>
    <string name="title_activity_write_comment" translatable="false">WriteCommentActivity</string>
    <string name="title_activity_interest" translatable="false">InterestActivity</string>
    <string name="title_activity_register" translatable="false">RegisterActivity</string>
    <string name="title_activity_users_profile" translatable="false">UsersProfileActivity</string>
    <string name="title_activity_login" translatable="false">LoginActivity</string>
    <string name="title_comment_activity" translatable="false">CommentActivity</string>
    <string name="preference_file_key" translatable="false">com.unamur.umatters.preference_file_key</string>
    <string name="saved_email_key" translatable="false">com.unamur.umatters.SAVED_EMAIL_KEY</string>
    <string name="saved_password_key" translatable="false">com.unamur.umatters.SAVED_PASSWORD_KEY</string>
    <string name="facebook_app_id">525719651445886</string>
    <string name="navigation_drawer_open">Ouvrir le menu de navigation</string>
    <string name="navigation_drawer_close">Fermer le menu de navigation</string>
    <string name="nav_header_desc">Entête de navigation</string>
    <string name="action_settings">Paramètres</string>
    <string name="pref_previously_started">précédemment démarrée</string>
    <string name="login">Connexion</string>
    <string name="unamur_logo">unamur logo</string>
    <string name="username">Nom d\'utilisateur</string>
    <string name="password">Mot de passe</string>
    <string name="remember_me">Se souvenir de moi</string>
    <string name="register">S\'inscrire</string>
    <string name="email_address">Adresse mail UNamur</string>
    <string name="login_error">Email ou mot de passe incorrecte</string>
    <string name="title_email_adress">Adresse mail UNamur :</string>
    <string name="title_password">Mot de passe :</string>
    <string name="title_password_confirmation">Confirmation mot de passe :</string>
    <string name="title_firstname">Prénom :</string>
    <string name="title_lastname">Nom :</string>
    <string name="title_role">Rôle :</string>
    <string name="roles">Rôles :</string>
    <string name="role_student">Etudiant</string>
    <string name="role_academic">Académique</string>
    <string name="role_scientific">Scientifique</string>
    <string name="role_atg">ATG</string>
    <string name="title_faculty">Faculté :</string>
    <string-array name="faculty">
        <item>Pas de faculté</item>
        <item>Informatique</item>
        <item>Droit</item>
        <item>Médecine</item>
        <item>Sciences</item>
        <item>Sciences économiques, sociales et de gestion</item>
        <item>Philosophie et lettres</item>
    </string-array>
    <string name="tags_setup">Initialisation des tags</string>
    <string name="tags_setup_explanation">Veuillez choisir les tags vous intéressant le plus.\nCela personnalisera votre expérience utilisateur.</string>
    <string name="name">Nom</string>
    <string name="date">Date</string>
    <string name="hour">Heure</string>
    <string name="question">Question</string>
    <string name="nb_likes">nb j\'aime</string>
    <string name="text">Texte</string>
    <string name="show_more">Afficher la suite...</string>
    <string name="hide">Réduire</string>
    <string-array name="tags_choices">
        <item>Général</item>
        <item>Informatique</item>
        <item>Droit</item>
        <item>Médecine</item>
        <item>Sciences</item>
        <item>Économie</item>
        <item>Philosophie et lettres</item>
        <item>AGE</item>
    </string-array>
    <string name="no_box">Aucune box disponible</string>
    <string name="generalTag">#Général</string>
    <string name="CSTag">#Informatique</string>
    <string name="LawTag">#Droit</string>
    <string name="medicineTag">#Médecine</string>
    <string name="scienceTag">#Sciences</string>
    <string name="EconomicsTag">#Economie</string>
    <string name="artsTag">#Philo\u0026Lettres</string>
    <string name="AGETag">#AGE</string>
    <string name="typeTags">Tags de type :</string>
    <string name="menu_home">Accueil</string>
    <string name="menu_profile">Profil</string>
    <string name="menu_subscriptions">Abonnements</string>
    <string name="menu_tags">Tags</string>
    <string name="menu_interets">Intérêts</string>
    <string name="menu_notifications">Notifications push</string>
    <string name="menu_settings">Paramètres</string>
    <string name="fullname">Nom complet</string>
    <string name="level">Niveau</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>
    <string name="search">Rechercher</string>
    <string name="populars">Populaires</string>
    <string-array name="council_choices">
        <item>Conseil d\'administration</item>
        <item>Informatique</item>
        <item>Droit</item>
        <item>Médecine</item>
        <item>Sciences</item>
        <item>Économie</item>
        <item>Philosophie et lettres</item>
        <item>Chambre politique</item>
    </string-array>
    <string name="createBox">Créer une box</string>
    <string name="description">Description</string>
    <string name="title">Titre</string>
    <string name="texte">Texte</string>
    <string name="typeBox">Type de box</string>
    <string name="textual">Textuelle</string>
    <string name="yesNoPoll">Sondage oui-non</string>
    <string name="multipleChoicePoll">Sondage à choix multiples</string>
    <string name="tags">Tags</string>
    <string name="typeTag">Tag de type :</string>
    <string name="otherTags">Autres tags :</string>
    <string name="tooManyChoices">Trop de choix.</string>
    <string name="choice">Choix</string>
    <string name="new_choice">Nouveau choix</string>
    <string name="tooManyOtherTags">Trop de tags.</string>
    <string name="delete_dialog_text">Voulez-vous vraiment supprimer cette box?</string>
    <string name="delete_dialog_title">Supprimer la box?</string>
    <string name="help">Aide</string>
    <string name="explanation_box">Les box vous permettent de partager vos idées et de débattre sur celles-ci avec les autres étudiants.</string>
    <string name="box_types">Types de box :</string>
    <string name="box_textual">Textuelle :</string>
    <string name="box_textual_explanation">Simple box de texte.</string>
    <string name="box_sondage_oui_non">Sondage oui-non :</string>
    <string name="box_oui_non_explanation">sondage comportant 2 réponses possibles, oui ou non.</string>
    <string name="box_choix_multiples">Sondage choix multiples :</string>
    <string name="box_choix_multiples_explanation">Sondage vous permettant de choisir un choix parmi une liste de choix.</string>
    <string name="tags_préférés">Tags préférés :</string>
    <string name="tags_de_type">Tags de type :</string>
    <string name="tags_facultatifs">Tags facultatifs :</string>
    <string name="explanation_tags_préférés">Les tags préférés sont des tags vous permettant de personnaliser votre expérience utilisateur étant donné qu\'ils sont choisis par défaut dans les filtres lors de l\'ouverture de l\'application.</string>
    <string name="explanation_tags_de_type">Les tags de type sont des tags identifiant le conseil visé lors de la création de la box. Ils apparaissent en orange sur celles-ci.</string>
    <string name="explanation_tags_facultatifs">Les tags facultatifs sont des tags permettant de spécifir le contenu d\'une box. Ils sont utiles lors d\'une recherche sur un sujet précis. Ces tags sont affichés en bleu.</string>
    <string name="explanation_populars">Les populaires reprennent les 10 box les plus aimées pour le conseil choisi. Ces box seront discutées lors des réunions de ce conseil.</string>
    <string name="explanation_archives">Les archives vous permettent de visualiser les précédentes réponses données aux box discutées lors des réunions du conseil choisi. Une archive peut avoir été acceptée, refusée ou mise en suspens par ce conseil.</string>
    <string name="explanation_subscriptions">La page des abonnements reprends 2 onglets. Le premier affiche les box postées par les personnes auxquelles vous êtes abonnés. Le deuxième affiche la liste des personnes auxquelles vous êtes abonnés.</string>
    <string name="explanation_interests">Pour vous intéresser à une box il suffit de cliquer sur la cloche jaune en dessous de celle-ci. La page "Mes intérêts" vous permettra ensuite de revenir sur toutes les box auxquelles vous vous êtes intéressés. De plus, vous serez notifié lorsque l\'une de ces box sera archivées.</string>
    <string name="change_password">Modifier le mot de passe</string>
    <string name="actual_password">Mot de passe actuel :</string>
    <string name="new_password">Nouveau mot de passe :</string>
    <string name="confirm_new_password">Confirmer nouveau mot de passe :</string>
    <string name="box_menu_delete"><font fgcolor='#FF1400'>Delete</font></string>
    <string name="box_menu_report"><font fgcolor='#FF1400'>Signaler</font></string>
    <string name="box_menu_unsubscribe">Se désabonner</string>
    <string name="box_menu_subscribe">S\'abonner</string>
    <string name="report">Signalement</string>
    <string name="report_reason">Raison :</string>
    <string name="report_comment">Commentaire :</string>
    <string name="cancel">Annuler</string>
    <string name="thanks_for_report">Merci pour votre signalement !</string>
    <string-array name="report_types">
        <item>Spam</item>
        <item>Insulte</item>
        <item>Harcèlement</item>
        <item>Contenu inapproprié</item>
        <item>Autre</item>
    </string-array>
    <string name="filter">Filtrer</string>
    <string name="sort">Trier</string>
    <string name="reset">Tout réinitialiser</string>
    <string name="oldest">Plus ancien d\'abord</string>
    <string name="latest">Plus récent d\'abord</string>
    <string name="popularity">Popularité</string>
    <string name="participation_level">Niveau de participation</string>
    <string name="category">Catégorie</string>
    <string name="students">Étudiants</string>
    <string name="academics">Académiques</string>
    <string name="scientists">Scientifiques</string>
    <string name="ATG">ATG</string>
    <string name="my_tags">Mes tags</string>
    <string name="boxTypes">Types de box :</string>
    <string name="type_textual">textuelle</string>
    <string name="type_oui_non">oui_non</string>
    <string name="type_choix_multiple">choix_multiple</string>
    <string name="archives">Archives</string>
    <string name="archives_accepted">Accepté</string>
    <string name="archives_pending">En suspens</string>
    <string name="archives_refused">Refusé</string>
    <string name="response">Réponse :</string>
    <string name="no_archives">Aucune archive</string>
    <string name="followers">Abonnés</string>
    <string name="following">Abonnements</string>
</resources>