<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_tags"
            android:icon="@drawable/ic_tags"
            android:title="@string/menu_tags" />
        <item
            android:id="@+id/nav_subscriptions"
            android:icon="@drawable/ic_abonnements"
            android:title="@string/menu_subscriptions" />
        <item
            android:id="@+id/nav_interets"
            android:icon="@drawable/ic_interests"
            android:title="@string/menu_interets" />
    </group>

    <item android:title="@string/menu_settings">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_notifications"
                android:title="@string/menu_notifications"
                app:actionLayout="@layout/layout_menu_switch"
                />
        </menu>
    </item>

</menu>
