<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:showIn="@layout/app_bar_filter"
    tools:context=".FilterActivity"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:background="@color/lightLightGrey"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:padding="12dp"
        android:elevation="3dp"
        >

        <ImageView
            android:id="@+id/pop_go_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back"
            android:layout_alignParentStart="true"
            />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/filter"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_centerInParent="true"
            />

        <ImageView
            android:id="@+id/ok_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_ok"
            />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightLightGrey"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/lightLightGrey"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#fff"
                android:padding="25dp"
                android:orientation="vertical"
                >

                <Button
                    android:id="@+id/btn_reset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reset"
                    android:background="@drawable/button_green_border_selector"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textSize="12sp"
                    android:textAllCaps="false"
                    android:minHeight="30dp"
                    android:layout_marginBottom="5dp"
                    android:layout_gravity="center_horizontal"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sort"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginBottom="10dp"
                    />

                <RadioGroup
                    android:id="@+id/rdgrp_sort"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    >

                    <RadioButton
                    android:id="@+id/rdbtn_lastest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/latest"
                    android:textSize="15sp"
                    android:checked="true"
                    />

                    <RadioButton
                        android:id="@+id/rdbtn_oldest"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/oldest"
                        android:textSize="15sp"
                        />

                    <RadioButton
                        android:id="@+id/rdbtn_popularity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/popularity"
                        android:textSize="15sp"
                        />

                    <RadioButton
                        android:id="@+id/rdbtn_participation_level"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/participation_level"
                        android:textSize="15sp"
                        />

                </RadioGroup>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="15dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#AFAFAF"
                    />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="15dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:layout_marginBottom="10dp"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/category"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimary"
                        />

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        />

                    <Button
                        android:id="@+id/btn_pref_tags"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button_green_border_selector"
                        android:minWidth="0dp"
                        android:minHeight="30dp"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:text="@string/my_tags"
                        android:textAllCaps="false"
                        android:textSize="12sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="27dp"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/typeTags"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:textColor="#000"
                        android:layout_gravity="center_vertical"
                        android:layout_marginBottom="3dp"
                        />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="2"
                        android:layout_marginStart="27dp"
                        android:layout_marginBottom="10dp"
                        >

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            >
                            <CheckBox
                                android:id="@+id/tag_general"
                                android:tag="@string/generalTag"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/generalTag"
                                />
                            <CheckBox
                                android:id="@+id/tag_informatique"
                                android:tag="@string/CSTag"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/CSTag"
                                />
                            <CheckBox
                                android:id="@+id/tag_medecine"
                                android:tag="@string/medicineTag"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/medicineTag"
                                />
                            <CheckBox
                                android:id="@+id/tag_economie"
                                android:tag="@string/EconomicsTag"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/EconomicsTag"
                                />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            >
                            <CheckBox
                                android:id="@+id/tag_age"
                                android:tag="@string/AGETag"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/AGETag"
                                />
                            <CheckBox
                                android:id="@+id/tag_droit"
                                android:tag="@string/LawTag"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/LawTag"
                                />

                            <CheckBox
                                android:id="@+id/tag_sciences"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:tag="@string/scienceTag"
                                android:text="@string/scienceTag" />
                            <CheckBox
                                android:id="@+id/tag_philo"
                                android:tag="@string/artsTag"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/artsTag"
                                />
                        </LinearLayout>

                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/boxTypes"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:textColor="#000"
                        android:layout_gravity="center_vertical"
                        android:layout_marginBottom="3dp"
                        />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginStart="27dp"
                        android:layout_marginBottom="10dp"
                        >
                        <CheckBox
                            android:id="@+id/type_textuelle"
                            android:tag="@string/type_textual"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/textual"
                            />
                        <CheckBox
                            android:id="@+id/type_oui_non"
                            android:tag="@string/type_oui_non"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/yesNoPoll"
                            />
                        <CheckBox
                            android:id="@+id/type_choix_multiples"
                            android:tag="@string/type_choix_multiple"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/multipleChoicePoll"
                            />

                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/roles"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:textColor="#000"
                        android:layout_gravity="center_vertical"
                        android:layout_marginBottom="3dp"
                        />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="2"
                        android:layout_marginStart="27dp"
                        >

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            >
                            <CheckBox
                                android:id="@+id/role_student"
                                android:tag="@string/role_student"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/students"
                                />
                            <CheckBox
                                android:id="@+id/role_academic"
                                android:tag="@string/role_academic"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/academics"
                                />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            >
                            <CheckBox
                                android:id="@+id/role_atg"
                                android:tag="@string/role_atg"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/ATG"
                                />
                            <CheckBox
                                android:id="@+id/role_sc"
                                android:tag="@string/role_scientific"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/scientists"
                                />
                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>