<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/report"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="18sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:orientation="vertical"
        >
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="10dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/report_reason"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"
                />

            <com.unamur.umatters.SpinnerWrapContent
                android:id="@+id/spinner_report_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:layout_gravity="start"
                style="@android:style/Widget.Holo.Light.Spinner"
                android:layout_marginStart="10dp"
                app:backgroundTint="@color/black"
                />
            
            
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/report_comment"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"
            />

        <EditText
            android:id="@+id/edtxt_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:maxLength="300"
            />
        
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:background="@drawable/button_background"
            />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/btn_report"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/box_menu_report"
            android:textColor="@color/red"
            android:background="@drawable/button_background"
            />

    </LinearLayout>

</LinearLayout>